--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<nav>
+    <button (click)="goToAdmitCard()">Go to Admit Card</button>
+    <button (click)="goToMarksheet()">Go to Marksheet</button>
+</nav>
+  <router-outlet></router-outlet>
